# mdformat-wikilink

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/mdformat_wikilink/: mdformat_plugin.py  mdit_wikilink_plugin.py
tests/: test_mdformat_wikilink.py
